Replaced Apache Commons IO methods to new Java native ones